# metabase-mcp-server

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/metabase_mcp_server/: __init__.py  config.py  connector.py  drd_extractor.py  drd_source_provider.py  manager.py  metabase_provider.py  server.py  tool_provider.py
tests/: conftest.py  test_server.py
