[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "metabase-mcp-server"
version = "0.1.0"
description = "MCP server for Metabase using drdroid-debug-toolkit MetabaseSourceManager"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp",
    "python-dotenv",
    "drdroid-debug-toolkit",
]

[project.scripts]
metabase-mcp-server = "metabase_mcp_server.server:main"

[tool.uv]
package = false
